# dmarc-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  dmarc-reader.conf.sample
share/: install-schema  schema.sql
src/: cli.yaml  config.rs  main.rs
